--- a/index.html
+++ b/index.html
@@ -80,9 +80,8 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
-                    <p class="text-primary text-uppercase mb-2 animated slideInDown">Welcome To Photozone</p>
-                    <h1 class="display-4 mb-3 animated slideInDown">Wedding And Portrait Studio Based in New York</h1>
-                    <p class="animated slideInDown">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <p class="text-primary text-uppercase mb-2 animated slideInDown">Welcome To MVP</p>
+                    <h1 class="display-4 mb-3 animated slideInDown">Wedding And Portrait Studio Based in India</h1>MVP Full-service photography studio based in Delhi, specializing in all types of photography. Whether it’s weddings, portraits, or corporate events, our team captures your moments with creativity and precision. From candid shots to professionally posed pictures, we ensure that your memories are beautifully preserved. MVP Media Production also offers customized packages to fit every budget and occasion.</p>
                     <div class="d-flex align-items-center pt-4 animated slideInDown">
                         <a href="" class="btn btn-primary py-3 px-4 me-5">Explore More</a>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
@@ -149,8 +148,8 @@
                     <div class="h-100">
                         <p class="text-primary text-uppercase mb-2">About Us</p>
                         <h1 class="display-6 mb-4">We Are Creative And Professional Photographer</h1>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                        <p>we bring passion and creativity to every shot. Whether it’s weddings, portraits, or corporate events, our experienced team captures the moments that matter most. We focus on details, emotions, and storytelling, ensuring your memories are preserved beautifully.</p>
+                        <p>We tailor our services to your unique vision, delivering a personalized and professional experience. With a commitment to quality and innovation, MVP Media Production transforms your special moments into timeless images that you'll cherish forever.</p>
                         <div class="row g-2 mb-4">
                             <div class="col-sm-6">
                                 <i class="fa fa-check text-primary me-3"></i>Quality Products
@@ -184,23 +183,23 @@
             <div class="row g-3">
                 <div class="col-lg-4 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="fact-item bg-light text-center h-100 p-5">
-                        <h1 class="display-2 text-primary mb-3" data-toggle="counter-up">35</h1>
+                        <h1 class="display-2 text-primary mb-3" data-toggle="counter-up">15</h1>
                         <h4 class="mb-3">Award Winning</h4>
-                        <span>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</span>
+                        <span>Our dedication to excellence has earned us numerous accolades in the photography industry. Each award reflects our passion for capturing unforgettable moments with precision and creativity.</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="fact-item bg-light text-center h-100 p-5">
                         <h1 class="display-2 text-primary mb-3" data-toggle="counter-up">45</h1>
                         <h4 class="mb-3">Years Experience</h4>
-                        <span>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</span>
+                        <span>With over four decades of experience, MVP Media Production has mastered the art of photography, delivering timeless images that exceed expectations.</span>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="fact-item bg-light text-center h-100 p-5">
                         <h1 class="display-2 text-primary mb-3" data-toggle="counter-up">12345</h1>
                         <h4 class="mb-3">Happy Clients</h4>
-                        <span>Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</span>
+                        <span>We’ve had the privilege of working with thousands of clients, each leaving with beautiful memories and lasting impressions captured by our expert team.</span>
                     </div>
                 </div>
             </div>
@@ -532,12 +531,12 @@
         <div class="row g-5 py-5">
             <div class="col-lg-6 pe-lg-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="display-5 text-primary">Photozone</h1>
+                    <h1 class="display-5 text-primary">MotionVerse Media Productions</h1>
                 </a>
-                <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt me-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope me-2"></i>info@example.com</p>
+                <p>"Capturing moments that tell your story, one frame at a time."</p>
+                <p><i class="fa fa-map-marker-alt me-2"></i>123 Street , New Delhi ,India</p>
+                <p><i class="fa fa-phone-alt me-2"></i>+91 9576251414</p>
+                <p><i class="fa fa-envelope me-2"></i>info.mvp@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-square btn-outline-primary rounded-circle me-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -582,11 +581,11 @@
     <div class="container-fluid bg-dark text-white border-top border-secondary px-0">
         <div class="d-flex flex-column flex-md-row justify-content-between">
             <div class="py-4 px-5 text-center text-md-start">
-                <p class="mb-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. All Rights Reserved.</p>
+                <p class="mb-0">&copy; <a class="text-primary" href="#">Siddhartrockx</a>. All Rights Reserved.</p>
             </div>
             <div class="py-4 px-5 bg-secondary footer-shape position-relative text-center text-md-end">
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                <p class="mb-0">Designed by <a class="text-primary fw-bold" href="https://htmlcodex.com">HTML Codex</a></p>  Distributed by <a href="https://themewagon.com" target="_blank" >ThemeWagon</a>
+                <p class="mb-0">Designed by <a class="text-primary fw-bold" href="https://vipulraj0152.github.io/myprofile/">Siddhartrockx</a></p>  Distributed by <a href="https://Github.com" target="_blank" >Github</a>
             </div>
         </div>
     </div>
